2008-06-01  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOOMethod.c (Tcl_NewMethod): Fix wrong initialization of
	reference counts when changing a method that is currently in use.
	Thanks to Kevin Kenny for spotting. [Bug 1981001]

2008-05-31  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOO.c (InitFoundation): Correct reference counting for
	strings used when creating the constructor for classes.
	* generic/tclOOMethod.c (TclOODelMethodRef): Correct fencepost error
	in reference counting of method implementation structures.
	* tests/oo.test (oo-0.5): Added a test to detect a memory leak problem
	relating to disposal of the core object system.

2008-05-30  Donal K. Fellows  <dkf@users.sf.net>

	=== RELEASE OF TCLOO VERSION 0.4 ===

	* configure.in, generic/tclOO.h, tests/oo.test, win/TclOO.rc: Update
	version numbers for 0.4 release. This version constitutes the point
	where a merge to Tcl 8.6a0 (after TIP#257) was carried out.

2008-05-29  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOOCall.c (TclOOGetSortedClassMethodList):
	* generic/tclOOInfo.c (InfoObjectMethodsCmd, InfoClassMethodsCmd):
	* tests/oo.test, doc/ooInfo.n: Corrected, simplified and systematized
	the code to introspect the list of methods supported by an object or
	class. Now, -all checks (super)classes and -private gets what is
	accepted by [my].

2008-05-28  Donal K. Fellows  <dkf@users.sf.net>

	* tests/oo.test (oo-16.4): Deepen this test to make it clearer what
	the difference between a class and a metaclass is.
	(initInterpreter): Factor out the code to set up a sub-interpreter for
	loading TclOO, so that the tests work when run with TclOO not loaded
	from the current directory.

2008-05-26  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOO.c (InitFoundation): Make the counter that gives each
	object a unique serial number be a thread-local so that if a method
	chain reference in a Tcl_Obj internal representation crosses an