@@ -1,3 +1,11 @@
+2008-06-02  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOO.c (ReleaseClassContents): Fix reference counting
+	problem identified by Keven Kenny through use of valgrind, which was
+	caused by failing to protect the Object as well as the Class (attached
+	to it) of a subclass being deleted and hence getting a freed-memory
+	read when attempting to delete the class command. [Bug 1981001]
+
 2008-06-01  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclOOMethod.c (Tcl_NewMethod): Fix wrong initialization of
